feat: hashing, health route done
